vlib/v/parser/tests/option_result_err.out
vlib/v/parser/tests/option_result_err.vv:2:2: error: invalid expression: unexpected keyword `return`
    1 | fn abc() ?!string {
    2 |     return ''
      |     ~~~~~~
    3 | }
